--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,20 +1,48 @@
 </div>
-<footer>
-    <div id="item1">
-        <div>Send F37 an Email</div>
-        <div>Send F37 an Email</div>
-        <div>Send F37 an Email</div>
-        <div>Send F37 an Email</div>
+<footer class="footer-distributed">
+    <div class="footer-left">
+        <h3><span>Duc</span>Vu</h3>
+        <p class="footer-links">
+            <a href="#">Home</a>
+            ·
+            <a href="#">Blog</a>
+            ·
+            <a href="#">Pricing</a>
+        </p>
+        <p class="footer-my-name">Duc Vu &copy; 2019</p>
     </div>
-    <div id="item2">
-        <div>On Twitter</div>
-        <hr>
-        <div>On Facebook</div>
-        <hr>
-        <div>On Instagram</div>
-        <hr>
+    <div class="footer-center">
+        <div>
+            <i class="fa fa-map-marker"></i>
+            <p><span>42 Emil Figge Street</span> Dortmund, Germany</p>
+        </div>
+
+        <div>
+            <i class="fa fa-phone"></i>
+            <p>+1 2345 6789</p>
+        </div>
+
+        <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:support@company.com">support@company.com</a></p>
+        </div>
+
     </div>
-    <div id="item3">Copyright © DUC VU 2019</div>
+
+    <div class="footer-right">
+        <p class="footer-me-follow">
+            <span>Follow me
+                <i class="fa fa-mars" style="font-size:24px;"></i>
+            </span>
+        </p>
+
+        <div class="footer-icons">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-tumblr"></i></a>
+        </div>
+    </div>
 </footer>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
