--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,50 +40,6 @@ body {
     border: #285e8e solid;
 }
 
-footer {
-    margin-top: 20px;
-    display: grid;
-    grid-template-areas: "area1 area2"
-                         "area3 area3";
-    grid-template-columns: 65% 35%;
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-    height: 200px;
-    /*background-color: rgba(47, 23, 15, 0.9);*/
-    opacity: .75;
-}
-
-footer > div, #item3 {
-    margin-top: 15px;
-    font-size: 12px;
-    color: #fff;
-    font-family: 'Raleway', sans-serif;
-}
-
-#item1 {
-    grid-area: area1;
-    display: flex;
-    flex-direction: column;
-}
-#item2 {
-    grid-area: area2;
-    display: flex;
-    flex-direction: column;
-}
-#item2 div {
-    text-align: left;
-}
-#item3 { grid-area: area3; }
-
-hr {
-    height: 1px;
-    color: #123455;
-    background-color: #123455;
-    border: none;
-}
-
 .form-control {
     background-color: white;
 }
@@ -149,6 +105,7 @@ hr {
     letter-spacing: 1px;
     text-transform: uppercase;
 }
+
 .btn:focus, .btn:active:focus, .btn.active:focus {
     outline: 0 none;
 }
@@ -157,12 +114,222 @@ hr {
     background: #0099cc;
     color: #ffffff;
 }
+
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
     background: #33a6cc;
 }
+
 .btn-primary:active, .btn-primary.active {
     background: #007299;
     box-shadow: none;
 }
+
+/*------------Footer------------*/
+
+footer {
+    position: fixed;
+    bottom: 0;
+}
+
+@media (max-height: 800px) {
+    footer {
+        position: static;
+    }
+
+    header {
+        padding-top: 40px;
+    }
+}
+
+.footer-distributed {
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: left;
+    font: bold 16px sans-serif;
+    padding: 20px 35px;
+    margin-top: 50px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right {
+    display: inline-block;
+    vertical-align: top;
+}
+
+/* Footer left */
+
+.footer-distributed .footer-left {
+    width: 40%;
+}
+
+/* The logo */
+
+.footer-distributed h3 {
+    color: #ffffff;
+    font: normal 36px 'Cookie', cursive;
+    margin: 0;
+}
+
+.footer-distributed h3 span {
+    color: #5383d3;
+}
+
+/* Footer links */
+
+.footer-distributed .footer-links {
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
+}
+
+.footer-distributed .footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+}
+
+.footer-distributed .footer-my-name {
+    color: #8f9296;
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+
+/* Footer Center */
+
+.footer-distributed .footer-center {
+    width: 35%;
+}
+
+.footer-distributed .footer-center i {
+    background-color: #33383b;
+    color: #ffffff;
+    font-size: 25px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    margin: 10px 15px;
+    vertical-align: middle;
+}
+
+.footer-distributed .footer-center i.fa-envelope {
+    font-size: 17px;
+    /*line-height: 38px;*/
+}
+
+.footer-distributed .footer-center p {
+    display: inline-block;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 0;
+}
+
+.footer-distributed .footer-center p span {
+    display: block;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 2;
+}
+
+.footer-distributed .footer-center p a {
+    color: chocolate;
+    text-decoration: none;
+}
+
+.footer-distributed .footer-center p a:hover {
+    color: #3B5998;
+}
+
+/* Footer Right */
+
+.footer-distributed .footer-right {
+    width: 20%;
+}
+
+.footer-distributed .footer-me-follow {
+    line-height: 20px;
+    color: #92999f;
+    font-size: 13px;
+    font-weight: normal;
+    margin-top: 10px;
+}
+
+.footer-distributed .footer-me-follow span {
+    display: block;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    border-bottom: white solid 1px;
+    padding-bottom: 10px;
+}
+
+.footer-distributed .footer-icons {
+    margin-top: 25px;
+}
+
+/* If you don't want the footer to be responsive, remove these media queries */
+
+@media (max-width: 880px) {
+
+    .footer-distributed {
+        font: bold 14px sans-serif;
+    }
+
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center,
+    .footer-distributed .footer-right {
+        display: block;
+        width: 100%;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
+    .footer-distributed .footer-center i {
+        margin-left: 0;
+    }
+}
+
+.fa {
+    padding: 10px;
+    font-size: 20px;
+    width: 40px;
+    line-height: 20px;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 10px 5px 0;
+    border-radius: 50%;
+}
+
+.fa:hover {
+    background-color: #000;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+
+.fa-tumblr {
+    background: #2c4762;
+    color: white;
+}
+
 
 
